--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -49,3 +49,33 @@ button#setBtn {
     background: #6060f4;
     color: white;
 }
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: background 1s;
+    background-color: white;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal--ripple {
+    background: #6060f4;
+}
+
+.modal--hidden {
+    top: 150%;
+    max-height: 0;
+    opacity: 0;
+}
+
+.modal__text {
+    color: white;
+    padding: 10px;
+}
