--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -50,23 +50,34 @@ button#setBtn {
     color: white;
 }
 
+.modal-background {
+    position: absolute;
+    top: 0;
+    left: -50%;
+    width: 150%;
+    height: 100%;
+    background: #6060f4;
+    transform: rotate(90deg);
+    transform-origin: bottom right;
+    transition: transform 0.3s ease-in;
+}
+
+.modal-background--visible {
+    transform: rotate(0deg);
+}
+
 .modal {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    transition: background 1s;
-    background-color: white;
+    transition: opacity 1s;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.modal--ripple {
-    background: #6060f4;
 }
 
 .modal--hidden {
