--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -50,6 +50,18 @@ button#setBtn {
     color: white;
 }
 
+input {
+    margin-top: 5px;
+    padding: 5px 10px;
+    background: white;
+    border: 1px solid #9f9f9f;
+    border-radius: 3px;
+}
+
+input:focus, button:focus {
+    outline: 2px solid #6060f4;
+}
+
 .modal-background {
     position: absolute;
     top: 0;
