--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -26,7 +26,8 @@ body {
     align-items: flex-end;
 }
 
-input, button {
+input,
+button {
     border: 1px solid #9f9f9f;
     border-radius: 3px;
     padding: 5px 10px;
@@ -76,7 +77,8 @@ input {
     background: white;
 }
 
-input:focus, button:focus {
+input:focus,
+button:focus {
     outline: 2px solid #6060f4;
 }
 
