--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,3 +1,7 @@
+:root {
+    --primary-color: #6060f4;
+}
+
 html,
 body {
     min-height: 90px;
@@ -7,23 +11,6 @@ body {
 body {
     padding: 15px;
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 10px;
-}
-
-.error--visible {
-    padding: 5px;
-    color: #893b3b;
-    border: 1px solid #893b3b;
-}
-
-.row {
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-    align-items: flex-end;
 }
 
 input,
@@ -36,39 +23,12 @@ button {
 button {
     height: 27px;
     background: white;
-    color: #6060f4;
+    color: var(--primary-color);
 }
 
 button:disabled {
     background: white !important;
     color: #9f9f9f !important;
-}
-
-button#setBtn {
-    background: #6060f4;
-    color: white;
-}
-
-button#tickToggleBtn {
-    min-width: 27px;
-    width: 27px;
-    position: relative;
-}
-
-.tick-state {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: x-large;
-    line-height: 26px;
-}
-
-.tick-state.tick-state--stopped::before {
-    content: '\23F5';
-}
-.tick-state:not(.tick-state--stopped)::before {
-    content: '\23F9';
 }
 
 input {
@@ -79,46 +39,5 @@ input {
 
 input:focus,
 button:focus {
-    outline: 2px solid #6060f4;
-}
-
-.modal-background {
-    position: absolute;
-    top: 0;
-    left: -50%;
-    width: 150%;
-    height: 100%;
-    background: radial-gradient(#8080fd, #6060f4);
-    transform: rotate(90deg);
-    transform-origin: bottom right;
-    transition: transform 0.3s ease-in;
-}
-
-.modal-background--visible {
-    transform: rotate(0deg);
-}
-
-.modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transition: opacity 1s;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.modal--hidden {
-    top: 150%;
-    max-height: 0;
-    opacity: 0;
-}
-
-.modal__text {
-    color: white;
-    padding: 10px;
+    outline: 2px solid var(--primary-color);
 }
