--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -6,7 +6,8 @@
 html,
 body {
     min-height: 90px;
-    min-width: fit-content;
+    min-width: 210px;
+    width: fit-content;
 
     color: var(--text-color);
     background-color: white;
