--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -49,7 +49,7 @@ button:not(:disabled):hover {
     cursor: pointer;
 }
 
-input:focus,
-button:focus {
+input:focus-visible,
+button:focus-visible {
     outline: 2px solid var(--primary-color);
 }
