feat: highlight validation errors

--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -2,7 +2,7 @@
     --primary-color: #6060f4;
     --text-color: #494949;
     --border-color: #c2c2c2;
-    --error-color: #893b3b;
+    --error-color: #8f4242;
 }
 
 html,
