add divider, adjust border color

--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #6060f4;
     --text-color: #494949;
-    --border-color: #c2c2c2;
+    --border-color: #dcdcdc;
     --error-color: #8f4242;
 }
 
