--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -28,6 +28,11 @@ body {
     margin: 0;
 }
 
+p, ul, dl {
+    margin: 0;
+    padding: 0;
+}
+
 button {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1;
