--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -28,6 +28,9 @@ html {
 }
 
 body {
+    /* Chrome overrides font family and size on body, so we need to set it here */
+    font-family: var(--font-family);
+    font-size: 1rem;
     min-width: 210px;
     width: fit-content;
     padding: 15px;
