--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -4,7 +4,7 @@
     --secondary-text-color: #9f9f9f;
     --border-color: #dcdcdc;
     --error-color: #8f4242;
-    --font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    --font-family: -apple-system, BlinkMacSystemFont, Inter, Helvetica, Arial, 'Liberation Sans', sans-serif;
 }
 
 html,
