--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -76,6 +76,7 @@ button:not(:disabled):hover {
 }
 
 input:focus-visible,
+select:focus-visible,
 button:focus-visible {
     outline: 2px solid var(--primary-color);
 }
