fix non-mobile popup width to 300px
needed to prevent some size shifts in Firefox

--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -32,7 +32,7 @@ body {
     font-family: var(--font-family);
     font-size: 1rem;
     min-width: 240px;
-    width: fit-content;
+    width: 300px;
 }
 
 @media (min-width: 400px) {
